<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tabangi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fblogin_str"></string>
    <string name="title_activity_feeds_page">FeedsPage</string>
    <string name="sosStr">SOS</string>
    <string name="helpStr">Give Help</string>
    <string name="logoutStr">Log Out</string>
    <string name="title_activity_sos_page">SosPage</string>
    <string name="title_activity_help_page">HelpPage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_btn"></string>

    <string-array name="user_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="gender_prompt">Gender</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_org_name">Organization Name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="submit_sign_up">Submit</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="log_in">Log In</string>
    <string name="app_name_aid">AId</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_calamity_event_info">CalamityEventInfo</string>
    <string name="title_activity_view_map">ViewMap</string>

    <string-array name="calamity_list_view">
        <item>Richard Tamala - Typhoon Yolanda</item>
        <item>Joshua Delica - Typhoon Yolanda</item>
        <item>Tata Emmanuel - Typhoon Yolanda</item>
        <item>Ryan Gambito - Typhoon Yolanda</item>
        <item>Richard Tamala - Typhoon Yolanda</item>
        <item>Joshua Delica - Typhoon Yolanda</item>
        <item>Tata Emmanuel - Typhoon Yolanda</item>
        <item>Ryan Gambito - Typhoon Yolanda</item>
        <item>Richard Tamala - Typhoon Yolanda</item>
        <item>Joshua Delica - Typhoon Yolanda</item>
        <item>Tata Emmanuel - Typhoon Yolanda</item>
        <item>Ryan Gambito - Typhoon Yolanda</item>
        <item>Richard Tamala - Typhoon Yolanda</item>
        <item>Joshua Delica - Typhoon Yolanda</item>
        <item>Tata Emmanuel - Typhoon Yolanda</item>
        <item>Ryan Gambito - Typhoon Yolanda</item>
        <item>Richard Tamala - Typhoon Yolanda</item>
        <item>Joshua Delica - Typhoon Yolanda</item>
        <item>Tata Emmanuel - Typhoon Yolanda</item>
        <item>Ryan Gambito - Typhoon Yolanda</item>
    </string-array>
    <string-array name="events_list_view">
        <item>Typhoon Yolanda Fund Raising</item>
        <item>Fun Run for a cause, Yolanda Calamity</item>
        <item>Repacking donation volunteering</item>
        <item>Typhoon Yolanda Fund Raising</item>
        <item>Fun Run for a cause, Yolanda Calamity</item>
        <item>Repacking donation volunteering</item>
        <item>Typhoon Yolanda Fund Raising</item>
        <item>Fun Run for a cause, Yolanda Calamity</item>
        <item>Repacking donation volunteering</item>
        <item>Typhoon Yolanda Fund Raising</item>
        <item>Fun Run for a cause, Yolanda Calamity</item>
        <item>Repacking donation volunteering</item>
        <item>Typhoon Yolanda Fund Raising</item>
        <item>Fun Run for a cause, Yolanda Calamity</item>
        <item>Repacking donation volunteering</item>
    </string-array>

    <string name="title_activity_calamity_info">CalamityInfo</string>

    <string name="viewMap2">View  Map</string>

</resources>
